# rest-app-12

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 26ca9a6f988a_create_initial_tables.py  2a9dc60d4024_.py  87fed69f8f76_create_tables.py  8c9f295157b4_add_conferm.py  b6f6760a57d2_add_users.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: schemas.py
src/conf/: config.py
src/database/: db.py  model.py
src/repository/: users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_respository_users.py
